--- a/2. web-api/2. DOM 조작 및 탐색/5. 태그 중간 삽입하기.html
+++ b/2. web-api/2. DOM 조작 및 탐색/5. 태그 중간 삽입하기.html
@@ -24,6 +24,11 @@
       // $fruits.insertBefore($newLi, $grape);
       // $fruits.insertBefore($newLi, $fruits.firstElementChild);
       $fruits.insertBefore($newLi, document.querySelector('li:nth-child(2)'));
+      
+      // 노드 이동
+      $fruits.appendChild($apple); // 원래 있던 애를 추가하면 뒤로
+      $fruits.insertBefore($banana, null); // null 이면 맨뒤로 붙음
+      
     </script>
   </body>
 </html>
