--- a/2. web-api/3. 속성 노드/4. 데이터 속성.html
+++ b/2. web-api/3. 속성 노드/4. 데이터 속성.html
@@ -25,6 +25,10 @@
 
     // 추가
     $user1.dataset.userPhoneNumber = '01023452434';
+
+
+    // 삭제
+    delete $user1.dataset.userNumber;
   </script>
 </body>
 </html>
