--- a/2. web-api/4. 이벤트/4. quiz1.html
+++ b/2. web-api/4. 이벤트/4. quiz1.html
@@ -28,6 +28,22 @@
         $text.classList.contains('disappear') ? '텍스트 보이기!!' : '텍스트 숨기기!!';
       });
       
+//강사 //
+
+    //   const $btn = document.getElementById('hider');
+    // const $textBox = document.querySelector('.text');
+
+    // $btn.addEventListener('click', () => {
+    //   const CLASS_NAME = 'disappear';
+    //   if ($textBox.classList.contains(CLASS_NAME)) {
+    //     $textBox.classList.remove(CLASS_NAME)
+    //     $btn.textContent = '텍스트 숨기기!';
+    //   } else {
+    //     $textBox.classList.add(CLASS_NAME);
+    //     $btn.textContent = '텍스트 보이기!';
+    //   }
+    // });
+
   
     </script>
   </body>
