--- a/2. web-api/UpDoWn/index.html
+++ b/2. web-api/UpDoWn/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <!-- js 연결 -->
-    <script type="module" src="js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
     
 </head>
 <body>    
@@ -26,7 +26,7 @@
             <h1 class="main-title">신나는 UP&DOWN 게임</h1>
             <div class="number-wrapper">
                 <h2>
-                  <em id="begin">1</em>부터 <em id="end">100</em>사이의 숫자를 클릭하세요.
+                <em id="begin">1</em>부터 <em id="end">100</em>사이의 숫자를 클릭하세요.
                 </h2>
                 <div id="numbers">
                     <!-- .icon{$}*10 -->
