--- a/2. web-api/ToDoLiSt_module/index.html
+++ b/2. web-api/ToDoLiSt_module/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <!-- custom js -->
-    <script src="js/app.js" defer></script>
+    <script type="module" src="js/app.js" defer></script>
 
 </head>
 <body>
