--- a/3. AJAX/2. Promise/5. async, await.html
+++ b/3. AJAX/2. Promise/5. async, await.html
@@ -6,22 +6,40 @@
   <title>Document</title>
 </head>
 <body>
-
+  
   <button id="show">댓글조회!</button>
   <script>
 
     function fetchGet() {
-      fetch('http://localhost:8383/api/v1/replies')
-        .then(res => res.json())
-        .then(json => {
-          console.log(json);
-        });
+      const result = fetch('http://localhost:8383/api/v1/replies/100');
+      // console.log(result);
+
+      const json = result.then(res => res.json());
+      // console.log(json);
+
+      const data = json.then(data => {
+        console.log('then내부:', data);
+        return '하하호호';
+      });
+      console.log('then외부:', data);
     }
 
-    document.getElementById('show').onclick = e => {
-      fetchGet();
+    // async함수는 기본적으로 Promise를 소비하는 함수
+    async function fetchGet2() {
+      // await : then메서드를 대신 호출해서 PromiseResult를 바로 가져옴
+      const result = await fetch('http://localhost:8383/api/v1/replies/100');
+      
+      const json = await result.json();
+      console.log(json);
     }
+
+
+    document.getElementById('show').onclick = e => {
+      // fetchGet();
+      fetchGet2();
+    };
+
   </script>
-  
+
 </body>
 </html>
